components/yopass/deployment/overlays/baremetal/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopass-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    # Replace with IP of host
    - host: yopass.192.168.1.151.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yopass-service
                port:
                  number: 1337
